re PR middle-end/52230 (OpenMP: Simple C program triggers SIGSEGV at execution)

PR middle-end/52230
	* omp-low.c (expand_omp_for): If a static schedule without
	chunk size has NULL region->cont, force fd.chunk_size to be
	integer_zero_node.

From-SVN: r184165